# badpiggies-editor

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  _strip_allows.py  build.rs  index.html
.github/workflows/: ci.yml  release-pages.yml
app/: Cargo.toml  index.html
app/assets/: canvas_touch_navigation.js  contraption_preview.js  dioxus.css  editor_canvas.js  native_canvas_host.js  native_contraption_preview_host.js  workspace_resizer.js
app/assets/locales/: ar.ftl  en-US.ftl  es-ES.ftl  fr-FR.ftl  ru-RU.ftl  zh-CN.ftl
app/assets/renderer/: badpiggies-render-worker.js
app/assets/shader/: _custom__prealpha_unlit_colortransparent_geometryz.wgsl  _custom__unlit_color_geometry__terrain_fill.wgsl  _custom__unlit_monochrome.wgsl  depth_mask__maskoverlay__runtime.wgsl  depth_mask__maskoverlaynv.wgsl  depth_mask__maskoverlaynv__runtime.wgsl  depth_mask__unlit_transparent_cg__runtime.wgsl
app/assets/worker/: badpiggies-worker.js
app/src/: main.rs
app/src/app_actions/: files.rs
app/src/app_view/: canvas.rs  mod.rs
app/src/components/: context_menu_transition.rs  mod.rs  save_editor.rs  text_editor.rs  tools.rs
app/src/editor_state/: mod.rs
app/src/i18n/: locale.rs  mod.rs
app/src/platform/: log_buffer.rs  mod.rs  native_renderer.rs  preferences.rs  processing.rs  runtime_assets.rs  startup.rs  task.rs
assets/: bg-data.json  bg-data.toml  level-refs.json  level-refs.toml  sprite-data.json  sprite-data.toml
assets/Material/: Episode2_Start.mat  Episode2a_Mid.mat  Episode2a_Start.mat  IngameAtlas.mat  IngameAtlas2_Alpha.mat  IngameAtlas2_PartIconsRenderQueueDimmed.mat  IngameAtlas2_Shiny.mat  IngameAtlas3_Gray.mat  IngameAtlas3_PartIconsRenderQueue.mat  IngameAtlas_Alpha.mat  IngameAtlas_Gray.mat  IngameAtlas_PartIconsRenderQueue.mat  IngameAtlas_Shiny.mat  MenuAtlas.mat  MenuAtlas2.mat  e2dCurve.mat  e2dCurve_1.mat
assets/Mesh/: Combined Mesh (root scene)_4.asset  GeneratedMesh_1000x128.asset  GeneratedMesh_1000x128_5.asset  GeneratedMesh_1000x128_6.asset  GeneratedMesh_1000x128_7.asset  GeneratedMesh_1000x160.asset  GeneratedMesh_1000x160_4.asset  GeneratedMesh_1000x160_7.asset  GeneratedMesh_1000x192_1.asset  GeneratedMesh_1000x192_2.asset  GeneratedMesh_1000x192_4.asset  GeneratedMesh_1000x192_6.asset  GeneratedMesh_1000x256_0.asset  GeneratedMesh_1000x256_1.asset  GeneratedMesh_1000x256_5.asset  GeneratedMesh_1000x256_6.asset  GeneratedMesh_1000x280.asset  GeneratedMesh_1020x188_0.asset  GeneratedMesh_1020x188_1.asset  GeneratedMesh_1020x188_5.asset  GeneratedMesh_1020x316.asset  GeneratedMesh_1020x316_1.asset  GeneratedMesh_1020x316_2.asset  GeneratedMesh_1020x316_4.asset  GeneratedMesh_1020x316_8.asset  GeneratedMesh_1020x476.asset  GeneratedMesh_1020x476_1.asset  GeneratedMesh_1020x476_4.asset  GeneratedMesh_1020x476_5.asset  GeneratedMesh_1020x476_6.asset  GeneratedMesh_1020x508_2.asset  GeneratedMesh_1020x508_5.asset  (+335 more)
crates/core/: Cargo.toml
crates/core/src/: lib.rs  parallel.rs  worker_protocol.rs
crates/core/src/data/: bg_data.rs  goal_animation.rs  level_db.rs  mod.rs  runtime_assets.rs  unity_anim.rs
crates/core/src/data/assets/: atlas_materials.rs  background_name.rs  mod.rs  terrain.rs  unitypackage_loader.rs
crates/core/src/data/bg_data/: overrides.rs  tables.rs  tests.rs  theme.rs
crates/core/src/data/icon_db/: layout.rs  mod.rs  parse.rs  runtime.rs
crates/core/src/data/prefab_sprites/: layout.rs  mod.rs  parse.rs
crates/core/src/data/sprite_db/: mod.rs  runtime.rs
crates/core/src/data/unity_particles/: tests.rs
crates/core/src/diagnostics/: error.rs
crates/core/src/domain/: level_warning.rs  mod.rs  parser.rs  terrain_prefab.rs  types.rs
crates/core/src/domain/level/: ops.rs  refs.rs
crates/core/src/domain/terrain_gen/: fill_mesh.rs  mod.rs  stripe_mesh.rs  tests.rs
crates/core/src/io/: crypto.rs  unity3d.rs  unityfs.rs
crates/core/src/io/save/: mod.rs  parser.rs
crates/core/src/unity_runtime/components/: bezier_mesh.rs  bridge.rs  camera_preview.rs  level_manager.rs  particle_system.rs  rigidbody.rs  unknown.rs  wind_area.rs
crates/core/tests/fixtures/: CHECKSUMS.sha256  README.md
crates/core/tests/fixtures/v1.5.1/assets/: sharedassets17.assets  sharedassets8.assets
crates/core/tests/fixtures/v1.5.1/levels/: Level_05_data.bytes  scenario_58_data.bytes
crates/core/tests/fixtures/v2.3.6/bundles/: Episode_1_Levels.unity3d  Episode_Race_Levels.unity3d
crates/native-window/: Cargo.toml
crates/native-window/src/: lib.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: contraption_preview.rs  engine.rs  gpu2d.rs  lib.rs  native.rs  native_text.rs  test_support.rs  web.rs
crates/renderer/src/data/assets/: texture_cache.rs  theme.rs
crates/renderer/src/i18n/: locale.rs
crates/renderer/src/renderer/: bg_shader.rs  clouds.rs  compounds.rs  dark_mask_shader.rs  edge_shader.rs  fill_shader.rs  goal_flag.rs  grid.rs  handles.rs  mod.rs  opaque_shader.rs  overlays.rs  preview.rs  shader_asset_coverage.rs  show.rs  sprite_shader.rs  terrain.rs  types.rs  wireframe_shader.rs
crates/renderer/src/renderer/background/: cache.rs  draw.rs  mod.rs  tests.rs
crates/renderer/src/renderer/compound_data/: derive.rs
crates/renderer/src/renderer/dark_overlay/: intervals.rs  mesh.rs  mod.rs  parse.rs
crates/renderer/src/renderer/input/: camera.rs  hit_test.rs  interaction.rs  mod.rs  terrain_edit.rs
crates/renderer/src/renderer/level_setup/: mod.rs  set_level.rs
crates/renderer/src/renderer/particles/: attached.rs  fan.rs  wind.rs  zzz.rs
crates/renderer/src/renderer/sprites/: data.rs  draw.rs  glow.rs  mod.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs
locales/: en-US.ftl  zh-CN.ftl
reference/: bg-data.toml
scripts/: build-renderers.sh  build-web-renderer.sh  build-web-worker.sh  serve-web.sh  test-canvas-touch-navigation.cjs  test-workspace-resizer.cjs
src/: app.rs  assets.rs  bg_data.rs  crypto.rs  goal_animation.rs  icon_db.rs  level_ops.rs  level_refs.rs  locale.rs  log_buffer.rs  main.rs  parser.rs  save_parser.rs  sprite_db.rs  terrain_gen.rs  types.rs
src/app/: actions.rs  (+16 more)
(+8433 files in other folders)
