[workspace]
members = [
    "app",
    "crates/core",
    "crates/renderer",
    "crates/worker",
]
resolver = "3"

[workspace.package]
version = "0.5.0-beta1"
edition = "2024"
authors = ["LambdaEd1th"]
license = "AGPL-3.0-or-later"
publish = false

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 2
lto = "thin"
codegen-units = 1
strip = "symbols"
