[package]
name = "badpiggies-editor-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Cross-platform Bad Piggies editor built with Dioxus"

[package.metadata.bundle]
name = "Bad Piggies Editor"
identifier = "io.github.lambdaed1th.badpiggies_editor"
icon = ["assets/ui/app-icon.png"]
resources = ["assets"]
category = "public.app-category.developer-tools"
short_description = "Editor for Bad Piggies"
long_description = """
A cross-platform editor for Bad Piggies levels and save data,
built with Dioxus and the original wgpu renderer.
"""

[[bin]]
name = "badpiggies-editor"
path = "src/main.rs"

[dependencies]
badpiggies_editor_core = { path = "../crates/core", default-features = false }
dioxus-free-icons = { version = "0.10", features = ["lucide"] }
dioxus-html = "0.7.9"
fluent-bundle = "0.16"
log = { version = "0.4", features = ["std"] }
ropey = "1.6.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sys-locale = { version = "0.3", features = ["js"] }
toml = { version = "1.1", features = ["preserve_order"] }
unic-langid = { version = "0.9", features = ["macros"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
badpiggies_editor_renderer = { path = "../crates/renderer" }
clap = { version = "4", features = ["derive"] }
dioxus = { version = "0.7.9", default-features = false, features = ["desktop"] }
env_logger = "0.11"
futures-channel = "0.3"
futures-timer = "3"
rayon = "1"
rfd = "0.17"

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.30.13", default-features = false, features = [
    "x11",
    "wayland",
] }

[target.'cfg(target_os = "macos")'.dependencies]
badpiggies_editor_native_window = { package = "badpiggies-editor-native-window", path = "../crates/native-window" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
dioxus = { version = "0.7.9", default-features = false, features = ["web"] }
js-sys = "0.3"
rfd = "0.17"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Blob",
    "ClipboardEvent",
    "DataTransfer",
    "DataTransferItem",
    "DataTransferItemList",
    "Document",
    "Element",
    "DragEvent",
    "ErrorEvent",
    "Event",
    "File",
    "FileList",
    "FileReader",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlInputElement",
    "Location",
    "MessageEvent",
    "Navigator",
    "Response",
    "Storage",
    "Url",
    "Window",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "console",
] }
