[package]
name = "badpiggies_editor_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "UI-free Bad Piggies level, save, Unity asset, and worker logic"

[dependencies]
aes = "0.9"
bytemuck = { version = "1", features = ["derive"] }
cbc = { version = "0.2", features = ["alloc"] }
flate2 = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
log = { version = "0.4", features = ["std"] }
lz4_flex = "0.14"
lzma-rs = { version = "0.3", features = ["raw_decoder"] }
md5 = "0.8"
pbkdf2 = { version = "0.13", features = ["hmac"] }
quick-xml = "0.41"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
serde_yaml = "0.9"
sha1 = "0.11"
tar = "0.4"
thiserror = "2"
toml = { version = "1.1", features = ["preserve_order"] }
unity-asset = "0.2.0"
unity-asset-binary = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1"
