[package]
name = "badpiggies-editor-native-window"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["std", "NSColorSpace", "NSWindow"] }
tao = "0.34.8"
