[package]
name = "badpiggies_editor_worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Web worker bindings for Bad Piggies editor core operations"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
badpiggies_editor_core = { path = "../core", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
serde = "1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
